RESOLVED FIXED269159
assertion failed in RemoteMediaResourceManager
https://bugs.webkit.org/show_bug.cgi?id=269159
Summary assertion failed in RemoteMediaResourceManager
Jean-Yves Avenard [:jya]
Reported 2024-02-11 02:09:50 PST
``` Thread 5 Crashed:: Dispatch queue: PlatformMediaResourceLoader 0 JavaScriptCore 0x138fcf5a8 WTFCrash + 24 (Assertions.cpp:351) 1 WebKit 0x11cce6f74 WTFCrashWithInfo(int, char const*, char const*, int) + 36 (Assertions.h:780) 2 WebKit 0x11dda01a8 WTF::assertIsMainThread() + 100 (MainThread.h:81) 3 WebKit 0x11df28dd8 WebKit::RemoteMediaResourceManager::~RemoteMediaResourceManager() + 64 (RemoteMediaResourceManager.cpp:52) 4 WebKit 0x11df28f50 WebKit::RemoteMediaResourceManager::~RemoteMediaResourceManager() + 32 (RemoteMediaResourceManager.cpp:51) 5 WebKit 0x11df28f80 WebKit::RemoteMediaResourceManager::~RemoteMediaResourceManager() + 32 (RemoteMediaResourceManager.cpp:51) 6 WebKit 0x11d5ffa08 void WTF::ThreadSafeWeakPtrControlBlock::strongDeref<IPC::WorkQueueMessageReceiver, (WTF::DestructionThread)0>() const::'lambda'()::operator()() const + 104 (ThreadSafeWeakPtr.h:101) 7 WebKit 0x11d5ff984 void WTF::ThreadSafeWeakPtrControlBlock::strongDeref<IPC::WorkQueueMessageReceiver, (WTF::DestructionThread)0>() const + 292 (ThreadSafeWeakPtr.h:107) 8 WebKit 0x11dd1e4a0 WTF::ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<IPC::WorkQueueMessageReceiver, ```
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-11 02:10:40 PST
Jean-Yves Avenard [:jya]
Comment 2 2024-02-11 02:13:05 PST
EWS
Comment 3 2024-02-11 13:54:42 PST
Committed 274446@main (2410dda9eaf4): <https://commits.webkit.org/274446@main> Reviewed commits have been landed. Closing PR #24227 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.