assertion failed in RemoteMediaResourceManager https://bugs.webkit.org/show_bug.cgi?id=269159 rdar://122738285

Reviewed by Chris Dumez.

A RemoteMediaResource may be holding a reference to the RemoteMediaResourceManager
while on the PlatformMediaResourceLoader work queue.
It is safe for the RemoteMediaResourceManager to be deleted on any threads.

* Source/WebKit/GPUProcess/media/RemoteMediaResourceManager.cpp:
(WebKit::RemoteMediaResourceManager::~RemoteMediaResourceManager):

Canonical link: https://commits.webkit.org/274446@main